deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-controller
  labels:
    app: admission-controller
    service: admission-controller-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-controller
      service: admission-controller-service
  template:
    metadata:
      labels:
        app: admission-controller
        service: admission-controller-service
    spec:
      containers:
        - name: admission-controller
          image: localhost:5000/admission-controller:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          command: ["sh", "-c", "cd /usr/local/bin && chmod 777 admission-controller && ls -l . && ./admission-controller"]
          volumeMounts:
          - name: admission-controller-cert
            mountPath: /cert
      volumes:
      - name: admission-controller-cert
        configMap:
          name: admission-controller-cert
