service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller-service
spec:
  selector:
    app: admission-controller
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
