admission-registration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-controller
webhooks:
- name: admission-controller.example.com
  sideEffects: None
  admissionReviewVersions:
    - "v1"
    - "v1beta1"
  clientConfig:
    service:
      name: admission-controller
      namespace: default
      path: "/"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQyakNDQXNLZ0F3SUJBZ0lVR2pSOStmNWdoQS93TUwvVWU5OFBDMkxyMXN3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1NURUxNQWtHQTFVRUJoTUNWVk14RVRBUEJnTlZCQWdNQ0Vsc2JHbHViMmx6TVE4d0RRWURWUVFIREFaVgpjbUpoYm1FeEZqQVVCZ05WQkFNTURXTnZiblJ5YjJ4c1pYSmZZMkV3SUJjTk1qTXhNakEyTVRjeE56VTJXaGdQCk1qSTVOekE1TWpBeE56RTNOVFphTUVreEN6QUpCZ05WQkFZVEFsVlRNUkV3RHdZRFZRUUlEQWhKYkd4cGJtOXAKY3pFUE1BMEdBMVVFQnd3R1ZYSmlZVzVoTVJZd0ZBWURWUVFEREExamIyNTBjbTlzYkdWeVgyTmhNSUlCSWpBTgpCZ2txaGtpRzl3ME [...]
